test/fail/interpolation/interp_multiline_string.lly
#[
SyntaxError: Multi-line string not allowed within interpolation.
    from interp_multiline_string.lly:6
]#

var v = $" ^(""" """)"
